minor improvements in Streams-KafkaBasicSample.ipynb

--- a/Streams-KafkaBasicSample.ipynb
+++ b/Streams-KafkaBasicSample.ipynb
@@ -165,7 +165,7 @@
     "\n",
     "    ca_server_cert = '/project_data/data_asset/<your dataset name>'\n",
     "\n",
-    "In the Kafka broker, create a partitioned topic, for example with three partitions. Enter the bootstrap servers and the topic name into the below cell.\n",
+    "In the Kafka broker, create a partitioned topic, for example with three partitions.\n",
     "\n",
     "\n",
     "<a id=\"create_1\"></a>\n",
@@ -177,7 +177,6 @@
     "```\n",
     "{\"sensor_id\": \"sensor_4545\", \"value\": 3567.87, \"ts\": 1559029421}\n",
     "```\n",
-    "\n",
     "\n",
     "All Streams applications start with a Topology object, so start by creating one:"
    ]
@@ -214,7 +213,7 @@
     "  - SASL/SCRAM-SHA-512 - you need a username and a password\n",
     "  - TLS - you need a client certificate and the private key of the certificate.\n",
     "\n",
-    "You always need a topic name that can be accessed."
+    "You always need a topic name that can be accessed. Enter at least the bootstrap servers and the topic name into the below cell."
    ]
   },
   {
@@ -223,10 +222,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "topic =  # add the Kafka topic here, it should have multiple partitions\n",
+    "topic = \"my_topic\"  ## change this to an existing topic, it should have multiple partitions\n",
+    "bootstrap_servers = \"host.domain:9092\"    ## change the bootstrap server(s) here\n",
     "\n",
     "# this template connects to an unsecured (no TLS) cluster without authentication \n",
-    "bootstrap_servers =     # add the bootstrap server(s) here\n",
     "connect_tls = False     # set True when Kafka must be connected with TLS\n",
     "ca_server_cert = None   # use PEM or filename if required, see section 1.3.1\n",
     "auth = AuthMethod.NONE  # chose one of NONE, TLS, PLAIN, SCRAM_SHA_512\n",
