removed workarounds for early streamsx 1.13, requires streamsx>=1.13.14

--- a/Streams-KafkaParallelSample.ipynb
+++ b/Streams-KafkaParallelSample.ipynb
@@ -321,10 +321,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# calculate a hash code of the key attribute in our tuple in a consistent way\n",
+    "# calculate a hash code of a string in a consistent way\n",
     "# needed for partitioned parallel streams\n",
-    "def hashcode_of_key(tuple):\n",
-    "    s = tuple['key']\n",
+    "def string_hashcode(s):\n",
     "    h = 0\n",
     "    for c in s:\n",
     "        h = (31 * h + ord(c)) & 0xFFFFFFFF\n",
@@ -336,7 +335,7 @@
     "receivedParallelPartitioned = received.parallel(\n",
     "    4,\n",
     "    routing=Routing.HASH_PARTITIONED,\n",
-    "    func=hashcode_of_key)"
+    "    func=lambda _tuple: string_hashcode(_tuple['key']))"
    ]
   },
   {
@@ -364,18 +363,19 @@
     "\n",
     "# parses the JSON in the message and adds the attributes to a tuple\n",
     "def parse_json_to_tuple(tuple):\n",
-    "    # the tuple is passed in as dict, the output tuple is also a dict, but\n",
-    "    # must contain the attributes of the 'SensorMessage' class\n",
+    "    # the tuple is passed in as dict, the output is a namedTuple\n",
     "    messageAsDict = json.loads(tuple['message'])\n",
-    "    # as an example, here we have {\"sensor_id\": \"sensor_4545\", \"value\": 3567.87, \"ts\": 1559029421}\n",
-    "    result = dict()\n",
-    "    result['sensor_id'] = messageAsDict['sensor_id']\n",
-    "    result['reading'] = messageAsDict['value']\n",
-    "    result['ts'] = messageAsDict['ts']\n",
-    "    # add the fields from the Kafka message meta data of the incoming tuple:\n",
-    "    result['partition'] = tuple['partition']\n",
-    "    result['messageTimestamp'] = tuple['messageTimestamp']\n",
-    "    return result\n",
+    "    # as an example, in 'messageAsDict we have\n",
+    "    # {\"sensor_id\": \"sensor_4545\", \"value\": 3567.87, \"ts\": 1559029421}\n",
+    "    \n",
+    "    # 5 required positional arguments: 'sensor_id', 'reading', 'ts', 'partition', and 'messageTimestamp'\n",
+    "    return SensorMessage(\n",
+    "        messageAsDict['sensor_id'],\n",
+    "        messageAsDict['value'],\n",
+    "        messageAsDict['ts'],\n",
+    "        tuple['partition'],\n",
+    "        tuple['messageTimestamp']\n",
+    "    )\n",
     "\n",
     "\n",
     "# map the parallelized stream to the new schema\n",
