--- a/Streams-SegmentIntegrationSample.ipynb
+++ b/Streams-SegmentIntegrationSample.ipynb
@@ -143,7 +143,9 @@
    "source": [
     "import sys\n",
     "\n",
-    "!{sys.executable} -m pip install --user --upgrade streamsx\n",
+    "sys.path.insert(0, '/opt/conda/envs/Python-3.6/lib/python3.6/site-packages')\n",
+    "\n",
+    "#!{sys.executable} -m pip install --user --upgrade streamsx\n",
     "!{sys.executable} -m pip install --user --upgrade streamsx.endpoint\n",
     "\n",
     "# When you need to install a specific version of the package, run this line instead:\n",
@@ -152,12 +154,12 @@
     "\n",
     "# show the installed versions of both packages\n",
     "import streamsx.topology.context\n",
-    "import streamsx.endpoint as endpoint\n",
+    "import streamsx.endpoint as ep\n",
     "print(\"INFO: streamsx.topology.context package version: \" + streamsx.topology.context.__version__)\n",
-    "print(\"INFO: streamsx.endpoint package version: \" + endpoint.__version__)\n",
+    "print(\"INFO: streamsx.endpoint package version: \" + ep.__version__)\n",
     "\n",
     "#For more details uncomment lines below.\n",
-    "!pip show streamsx\n",
+    "#!pip show streamsx\n",
     "#print(cfg)\n"
    ]
   },
@@ -297,14 +299,14 @@
     "        self.songsCount      = len(self.songs)\n",
     "        \n",
     "\n",
-    "#    def __enter__(self):\n",
-    "#        print(\"INFO: Webhook Data Source starting up\")\n",
+    "    def __enter__(self):\n",
+    "        print(\"INFO: Webhook Data Source starting up\")\n",
     "\n",
-    "#    def __exit__(self, excptn_type, excptn_value, traceback):\n",
-    "#        if excptn_type or excptn_value or traceback:\n",
-    "#            print(\"WARN: Some exception\")\n",
-    "#        else:\n",
-    "#            print(\"Process is shutting down\")\n",
+    "    def __exit__(self, excptn_type, excptn_value, traceback):\n",
+    "        if excptn_type or excptn_value or traceback:\n",
+    "            print(\"WARN: Some exception\")\n",
+    "        else:\n",
+    "            print(\"Process is shutting down\")\n",
     "\n",
     "        \n",
     "    def generateMessageId(self):\n",
@@ -491,11 +493,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from streamsx.topology.topology import Topology\n",
     "from streamsx.topology.schema import CommonSchema\n",
-    "\n",
-    "#import streamsx.topology.context\n",
-    "\n",
+    "from streamsx.topology.topology import Topology\n",
     "\n",
     "# Create topology\n",
     "mockupDataTopo = Topology(name=\"MockupWebhookData\")\n",
@@ -613,7 +612,8 @@
     "\n",
     "\n",
     "# Use WebhookDataSource as a Streams source\n",
-    "webhookDataStream = endpoint.inject(webhookDataTopo)\n",
+    "# Injection URL (application/json): /x/y/ports/output/0/inject\n",
+    "webhookDataStream = ep.inject(webhookDataTopo, context='streams-segment-sample', name='jsoninject', monitor='nbg7-test')\n",
     "\n",
     "# Attach a view to watch the data stream when running\n",
     "webhookDataStream_view = webhookDataStream.view(name=\"Webhook data\", description=\"Webhook data stream\")\n",
@@ -640,6 +640,10 @@
     "\n",
     "# Disable SSL certificate verification if necessary\n",
     "cfg[context.ConfigParams.SSL_VERIFY] = False\n",
+    "\n",
+    "# Give the job a unique name \n",
+    "job_config = context.JobConfig(tracing='info', job_name='segment-webhook-peer')\n",
+    "job_config.add(cfg)\n",
     "\n",
     "# submit the topology\n",
     "submissionResultWebhookData = None\n",
