--- a/Streams-SegmentIntegrationSample.ipynb
+++ b/Streams-SegmentIntegrationSample.ipynb
@@ -143,7 +143,7 @@
    "source": [
     "import sys\n",
     "\n",
-    "sys.path.insert(0, '/opt/conda/envs/Python-3.6/lib/python3.6/site-packages')\n",
+    "sys.path.insert(0, '/home/wsuser/.local/lib/python3.6/site-packages')\n",
     "\n",
     "#!{sys.executable} -m pip install --user --upgrade streamsx\n",
     "!{sys.executable} -m pip install --user --upgrade streamsx.endpoint\n",
@@ -161,6 +161,16 @@
     "#For more details uncomment lines below.\n",
     "#!pip show streamsx\n",
     "#print(cfg)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inetserver_toolkit = ep.download_toolkit()\n",
+    "\n"
    ]
   },
   {
@@ -613,7 +623,8 @@
     "\n",
     "# Use WebhookDataSource as a Streams source\n",
     "# Injection URL (application/json): /x/y/ports/output/0/inject\n",
-    "webhookDataStream = ep.inject(webhookDataTopo, context='streams-segment-sample', name='jsoninject', monitor='nbg7-test')\n",
+    "#webhookDataStream = ep.inject(webhookDataTopo, context='streams-segment-sample', name='jsoninject', monitor='endpoint-monitor')\n",
+    "webhookDataStream = ep.inject(webhookDataTopo, context='streams-segment-sample', name='jsoninject', monitor=None)\n",
     "\n",
     "# Attach a view to watch the data stream when running\n",
     "webhookDataStream_view = webhookDataStream.view(name=\"Webhook data\", description=\"Webhook data stream\")\n",
@@ -637,6 +648,9 @@
    "outputs": [],
    "source": [
     "from streamsx.topology import context\n",
+    "from streamsx.spl.toolkit import add_toolkit\n",
+    "\n",
+    "add_toolkit(webhookDataTopo, inetserver_toolkit)\n",
     "\n",
     "# Disable SSL certificate verification if necessary\n",
     "cfg[context.ConfigParams.SSL_VERIFY] = False\n",
@@ -647,8 +661,8 @@
     "\n",
     "# submit the topology\n",
     "submissionResultWebhookData = None\n",
-    "#submissionResultWebhookData = context.submit (\"DISTRIBUTED\", webhookDataTopo, config=cfg)    # Currently - as the INetserver toolkit isn't installed, this runs into:    CDISP0053E ERROR: An unknown identifier was referenced in the SPL program: com.ibm.streamsx.inet.rest::HTTPJSONInjection.\n",
-    "#print(submissionResultWebhookData)\n",
+    "submissionResultWebhookData = context.submit (\"DISTRIBUTED\", webhookDataTopo, config=cfg)    # Currently - as the INetserver toolkit isn't installed, this runs into:    CDISP0053E ERROR: An unknown identifier was referenced in the SPL program: com.ibm.streamsx.inet.rest::HTTPJSONInjection.\n",
+    "print(submissionResultWebhookData)\n",
     "\n",
     "# The submission_result object contains information about the running application, or job\n",
     "webhookDataJob = None\n",
@@ -662,6 +676,15 @@
    "metadata": {},
    "source": [
     "### Inspect the data using a view"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://streams-endpointmonitor:8443/segment-webhook-peer/streams-segment-sample/jsoninject/ports/output/0/inject"
    ]
   },
   {
