--- a/Streams-SPLToolkitsTutorial.ipynb
+++ b/Streams-SPLToolkitsTutorial.ipynb
@@ -312,6 +312,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Download samples directory from repository"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp_samples = tkutils.download_toolkit('samples', repository_name='streamsx.nlp')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "List the samples directory"
    ]
   },
@@ -321,7 +337,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!ls $nlp_tk/../samples"
+    "!ls $nlp_samples"
    ]
   },
   {
@@ -338,7 +354,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_app = nlp_tk + '/../samples/LemmatizerSample'\n",
+    "sample_app = nlp_samples + '/LemmatizerSample'\n",
     "main_composite_name = 'nlp.sample::LemmatizerSample'\n",
     "\n",
     "import streamsx.spl.op as op\n",
