--- a/Streams-HbaseSample.ipynb
+++ b/Streams-HbaseSample.ipynb
@@ -78,7 +78,7 @@
    "outputs": [],
    "source": [
     "#import sys\n",
-    "#sys.path.insert(0, '/home/wsuser/.local/lib/python3.6/site-packages')\n"
+    "#sys.path.insert(0, '/home/wsuser/.local/lib/python3.6/site-packages')"
    ]
   },
   {
@@ -206,9 +206,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url_hbase_version = 'https://github.com/IBMStreams/streamsx.hbase/releases/download/v3.8.0/streamsx.hbase.toolkits-3.8.0-20190829-1529.tgz'\n",
-    "hbase_toolkit_location = hbase.download_toolkit(url=url_hbase_version)\n",
-    "streamsx.spl.toolkit.add_toolkit(topo, hbase_toolkit_location)"
+    "#url_hbase_version = 'https://github.com/IBMStreams/streamsx.hbase/releases/download/v3.8.0/streamsx.hbase.toolkits-3.8.0-20190829-1529.tgz'\n",
+    "#hbase_toolkit_location = hbase.download_toolkit(url=url_hbase_version)\n",
+    "#streamsx.spl.toolkit.add_toolkit(topo, hbase_toolkit_location)"
    ]
   },
   {
@@ -253,7 +253,7 @@
    "source": [
     "def _create_stream_for_put(topo):\n",
     "    putStream = topo.source([0,1,2,3,4,5,6,7,8,9])\n",
-    "    schema=StreamSchema('tuple<int32 id, rstring character, rstring colF, rstring colQ, rstring value>').as_tuple()\n",
+    "    schema=StreamSchema('tuple<int32 id, rstring character, rstring colF, rstring colQ, rstring value, int64 Timestamp>').as_tuple()\n",
     "    return putStream.map(lambda x : (x,'Gandalf_' + str(x), 'location','beginTwoTowers', 'travelling'), schema=schema)\n",
     "\n",
     "putStream = _create_stream_for_put(topo) \n",
@@ -417,13 +417,6 @@
     "  \n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
