term "Streaming Analytics Service" replaced

--- a/Streams-KafkaBasicSample.ipynb
+++ b/Streams-KafkaBasicSample.ipynb
@@ -223,6 +223,7 @@
    "outputs": [],
    "source": [
     "topic = \"my_topic\"  ## change this to an existing topic, it should have multiple partitions\n",
+    "kafka_group_id = \"group1\"  ## change the consumer group identifier if required\n",
     "bootstrap_servers = \"host.domain:9092\"    ## change the bootstrap server(s) here\n",
     "\n",
     "# this template connects to an unsecured (no TLS) cluster without authentication \n",
@@ -294,7 +295,7 @@
     "    consumer_topology,\n",
     "    topic=topic,\n",
     "    schema=consumerSchema,\n",
-    "    group='my_consumer_group', # when not specified it is the job name, concatenated with the topic\n",
+    "    group=kafka_group_id,  # when not specified it is the job name, concatenated with the topic\n",
     "    kafka_properties=consumer_configs,\n",
     "    name=\"SensorSubscribe\"\n",
     "    ).set_parallel(3).end_parallel()\n"
@@ -459,7 +460,7 @@
    "metadata": {},
    "source": [
     "<a id=\"launch\"></a>\n",
-    "# 4. Submit both applications to the Streaming Analytics Service\n",
+    "# 4. Submit both applications to the Streams instance\n",
     "A running Streams application is called a *job*. By submitting the topologies we create two independent jobs."
    ]
   },
