--- a/Streams-HdfsSample.ipynb
+++ b/Streams-HdfsSample.ipynb
@@ -205,9 +205,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "streamsx_hdfs_url = 'https://github.com/IBMStreams/streamsx.hdfs/releases/download/v5.1.0/streamx.hdfs.toolkits-5.1.0-20191002-1505.tgz'\n",
-    "hdfs_toolkit_location = hdfs.download_toolkit(url=streamsx_hdfs_url)\n",
-    "streamsx.spl.toolkit.add_toolkit(topo, hdfs_toolkit_location)\n"
+    "#hdfs_toolkit_location = hdfs.download_toolkit()\n",
+    "#streamsx.spl.toolkit.add_toolkit(topo, hdfs_toolkit_location)\n"
    ]
   },
   {
@@ -226,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a name=\"sink\"> </a> 2.2. Sink streaming data in a HDSF file\n",
+    "## <a name=\"sink\"> </a> 2.2. Sink streaming data in a HDFS file\n",
     "\n",
     "Next, we generate a stream of data and write this data in a HDFS file.<br/>\n",
     "But before we start the application, we have to create an HDFS test directory on our hadoop server.<br/>\n",
@@ -244,7 +243,7 @@
     "```  \n",
     "In the first step we write one line in a HDFS file. <br/>\n",
     "The function `fileSinkInputStream` creates a stream that contains one line. <br/> \n",
-    "The function `hdfs.write` is the python wrapper of operator `HDFS2FielSink` .<br/>\n",
+    "The function `hdfs.write` is the python wrapper of operator `HDFS2FileSink` .<br/>\n",
     "It gets the data streams from `fileSinkInputStream` as input and inserts created lines into a HDFS file."
    ]
   },
@@ -266,7 +265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a name=\"dynamic_file_sink\"> </a> 2.3. Sink streaming data with dynamic file names into HDSF\n",
+    "## <a name=\"dynamic_file_sink\"> </a> 2.3. Sink streaming data with dynamic file names into HDFS\n",
     "In the next step we write some lines in several files (dynamic file names)."
    ]
   },
@@ -302,7 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a name=\"scan\"> </a> 2.4. scan all lines from the HDFS file\n",
+    "## <a name=\"scan\"> </a> 2.4. Scan all lines from the HDFS file\n",
     "In the next step we scan all files from a HDFS directory.<br/>\n",
     "The function `hdfs.scan` is the python wrapper of operator `HDFS2DiectoryScan` and scans a Hadoop Distributed File System directory for new or modified files and returns the file names.<br/>\n",
     "The parameter `init_delay` specifies the time to wait in seconds before the operator scans the files. <br/>\n",
@@ -328,7 +327,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a name=\"get\"> </a> 2.5. read lines from the HDFS file\n",
+    "## <a name=\"get\"> </a> 2.5. Read lines from the HDFS file\n",
     "Now we read lines from files. <br/>\n",
     "The function `hdfs.read` is the python wrapper of operator `HDFS2FielSource` . <br/>\n",
     "It gets scanned file names from `scan` as input stream, opens the files to read and returns the lines of files. <br/>"
@@ -360,7 +359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a view to check retrievin lines from a file\n",
+    "# create a view to retrieve lines from a file\n",
     "readView = readLines.view(name=\"readLines\", description=\"shows the lines file HDFS files.\")"
    ]
   },
