--- a/Streams-SegmentIntegrationSample.ipynb
+++ b/Streams-SegmentIntegrationSample.ipynb
@@ -143,9 +143,9 @@
    "source": [
     "import sys\n",
     "\n",
-    "sys.path.insert(0, '/home/wsuser/.local/lib/python3.6/site-packages')\n",
+    "#sys.path.insert(0, '/home/wsuser/.local/lib/python3.6/site-packages')\n",
     "\n",
-    "#!{sys.executable} -m pip install --user --upgrade streamsx\n",
+    "!{sys.executable} -m pip install --user --upgrade streamsx\n",
     "!{sys.executable} -m pip install --user --upgrade streamsx.endpoint\n",
     "\n",
     "# When you need to install a specific version of the package, run this line instead:\n",
@@ -158,19 +158,12 @@
     "print(\"INFO: streamsx.topology.context package version: \" + streamsx.topology.context.__version__)\n",
     "print(\"INFO: streamsx.endpoint package version: \" + ep.__version__)\n",
     "\n",
+    "# ensure the toolkit underlying streamsx.endpoint is available\n",
+    "inetserver_toolkit = ep.download_toolkit()\n",
+    "\n",
     "#For more details uncomment lines below.\n",
     "#!pip show streamsx\n",
-    "#print(cfg)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inetserver_toolkit = ep.download_toolkit()\n",
-    "\n"
+    "#print(cfg)"
    ]
   },
   {
@@ -552,7 +545,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Inspect the data using a view"
+    "### Create a thread class to inspect data using a view"
    ]
   },
   {
@@ -561,15 +554,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from streamsx.topology import context\n",
+    "import threading\n",
+    "import time\n",
     "\n",
-    "# Show 5 seconds of raw webhook data\n",
+    "\n",
+    "class readViewDataThread (threading.Thread):\n",
+    "    def __init__(self, view, durationSec):\n",
+    "        threading.Thread.__init__(self)\n",
+    "        self.view = view\n",
+    "        self.durationSec = durationSec\n",
+    "        \n",
+    "    def run(self):\n",
+    "        values = self.view.start_data_fetch()\n",
+    "        timeSpan = time.time() + self.durationSec;\n",
+    "        while time.time() < timeSpan:\n",
+    "            print(values.get())\n",
+    "        self.view.stop_data_fetch()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inspect the data using the thread class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if mockupDataJob:\n",
-    "    queue = mockupDataStream_view.start_data_fetch()\n",
-    "    timeSpan = time.time() + 5;\n",
-    "    while time.time() < timeSpan:\n",
-    "        print(queue.get())\n",
-    "    mockupDataStream_view.stop_data_fetch()"
+    "    # Create a thread\n",
+    "    mokupDataValues = readViewDataThread(mockupDataStream_view, 2)\n",
+    "    \n",
+    "    # Start new Threads\n",
+    "    mokupDataValues.start()\n",
+    "    #mokupDataValues.join()\n"
    ]
   },
   {
@@ -624,6 +646,7 @@
     "# Use WebhookDataSource as a Streams source\n",
     "# Injection URL (application/json): /x/y/ports/output/0/inject\n",
     "#webhookDataStream = ep.inject(webhookDataTopo, context='streams-segment-sample', name='jsoninject', monitor='endpoint-monitor')\n",
+    "#webhookDataStream = ep.inject(webhookDataTopo, context='streams-segment-sample', name='jsoninject', monitor='nbg8-test')\n",
     "webhookDataStream = ep.inject(webhookDataTopo, context='streams-segment-sample', name='jsoninject', monitor=None)\n",
     "\n",
     "# Attach a view to watch the data stream when running\n",
@@ -631,7 +654,7 @@
     "\n",
     "\n",
     "# Publish mockup data\n",
-    "webhookDataStream.publish(topic=\"SegmentWebhookDataInJson\", schema=CommonSchema.Json, name=\"WebhookData\")\n"
+    "webhookDataStream.publish(topic=\"SegmentWebhookData\", schema=CommonSchema.Json, name=\"WebhookData\")\n"
    ]
   },
   {
@@ -644,7 +667,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from streamsx.topology import context\n",
@@ -656,13 +681,13 @@
     "cfg[context.ConfigParams.SSL_VERIFY] = False\n",
     "\n",
     "# Give the job a unique name \n",
-    "job_config = context.JobConfig(tracing='info', job_name='segment-webhook-peer')\n",
+    "job_config = context.JobConfig(tracing='info', job_name='segment-webhook-peer2')\n",
     "job_config.add(cfg)\n",
     "\n",
     "# submit the topology\n",
     "submissionResultWebhookData = None\n",
     "submissionResultWebhookData = context.submit (\"DISTRIBUTED\", webhookDataTopo, config=cfg)    # Currently - as the INetserver toolkit isn't installed, this runs into:    CDISP0053E ERROR: An unknown identifier was referenced in the SPL program: com.ibm.streamsx.inet.rest::HTTPJSONInjection.\n",
-    "print(submissionResultWebhookData)\n",
+    "#print(submissionResultWebhookData)\n",
     "\n",
     "# The submission_result object contains information about the running application, or job\n",
     "webhookDataJob = None\n",
@@ -675,33 +700,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Inspect the data using a view"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://streams-endpointmonitor:8443/segment-webhook-peer/streams-segment-sample/jsoninject/ports/output/0/inject"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from streamsx.topology import context\n",
+    "### curl commands to try ...\n",
     "\n",
-    "# Show 5 seconds of raw webhook data\n",
+    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://nbg8-test:8443/segment-webhook-peer/streams-segment-sample2/jsoninject/inject\n",
+    "\n",
+    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://nbg8-test:8443/segment-webhook-peer/streams-segment-sample2/jsoninject/ports/output/0/inject\n",
+    "\n",
+    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://nbg8-test-nbg8.apps.syss161.pok.stglabs.ibm.com:8443/segment-webhook-peer2/streams-segment-sample/jsoninject/inject\n",
+    "\n",
+    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://nbg8-test-nbg8.apps.syss161.pok.stglabs.ibm.com:8443/segment-webhook-peer2/streams-segment-sample/jsoninject/ports/output/0/inject\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://nbg8-test:8443/segment-webhook-peer/streams-segment-sample2/jsoninject/inject\n",
+    "\n",
+    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://nbg8-test:8443/segment-webhook-peer/streams-segment-sample2/jsoninject/ports/output/0/inject\n",
+    "\n",
+    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://nbg8-test-nbg8.apps.syss161.pok.stglabs.ibm.com:8443/segment-webhook-peer2/streams-segment-sample/jsoninject/inject\n",
+    "\n",
+    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://nbg8-test-nbg8.apps.syss161.pok.stglabs.ibm.com:8443/segment-webhook-peer2/streams-segment-sample/jsoninject/ports/output/0/inject\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inspect the data using the thread class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if webhookDataJob:\n",
-    "    queue = webhookDataStream_view.start_data_fetch()\n",
-    "    timeSpan = time.time() + 5;\n",
-    "    while time.time() < timeSpan:\n",
-    "        print(queue.get())\n",
-    "    webhookDataStream_view.stop_data_fetch()"
+    "    # Create a thread\n",
+    "    webhookDataValues = readViewDataThread(webhookDataStream_view, 30)\n",
+    "    \n",
+    "    # Start new Threads\n",
+    "    webhookDataValues.start()\n",
+    "    #webhookDataValues.join()\n"
    ]
   },
   {
@@ -752,17 +797,17 @@
     "segmentTopo.add_pip_package('analytics-python')\n",
     "\n",
     "# Use WebhookDataSource as a Streams source\n",
-    "webhookDataStream = segmentTopo.subscribe(topic=\"SegmentWebhookData\", schema=CommonSchema.Json)\n",
+    "dataStream = segmentTopo.subscribe(topic=\"SegmentWebhookData\", schema=CommonSchema.Json)\n",
     "\n",
     "# A clutch to attach a view to subscribe()'s output\n",
-    "filteredWebhookDataStream = webhookDataStream.filter(alwaysTrueFilter)\n",
+    "filteredDataStream = dataStream.filter(alwaysTrueFilter)\n",
     "\n",
     "# Attach a view to watch the data stream when running\n",
-    "webhookDataStream_view = filteredWebhookDataStream.view(name=\"Webhook data\", description=\"Webhook data stream\")\n",
+    "dataStream_view = filteredDataStream.view(name=\"Webhook data\", description=\"Webhook data stream\")\n",
     "\n",
     "# Define a batch window and count Identify events per user\n",
-    "webhookDataBatch = filteredWebhookDataStream.batch(20)\n",
-    "identifyEventCount = webhookDataBatch.aggregate(IdentifyCounter())\n",
+    "dataBatch = filteredDataStream.batch(20)\n",
+    "identifyEventCount = dataBatch.aggregate(IdentifyCounter())\n",
     "identifyEventCount_view = identifyEventCount.view(name=\"IdentifyEventCounts\", description=\"Data set containing the count of Identify events per user for the last batch\");\n",
     "\n",
     "identifyEventCount.for_each(sendIdentifyAggregateEvents)\n"
@@ -818,11 +863,11 @@
     "\n",
     "# Show 5 seconds of raw webhook data\n",
     "if streamsJob:\n",
-    "    queue = webhookDataStream_view.start_data_fetch()\n",
+    "    dataStreamValues = dataStream_view.start_data_fetch()\n",
     "    timeSpan = time.time() + 5;\n",
     "    while time.time() < timeSpan:\n",
-    "        print(queue.get())\n",
-    "    webhookDataStream_view.stop_data_fetch()"
+    "        print(dataStreamValues.get())\n",
+    "    dataStream_view.stop_data_fetch()"
    ]
   },
   {
@@ -837,10 +882,10 @@
     "\n",
     "# Show 30 seconds of aggregated identify data\n",
     "if streamsJob:\n",
-    "    queue = identifyEventCount_view.start_data_fetch()\n",
+    "    identifyEventCountValues = identifyEventCount_view.start_data_fetch()\n",
     "    timeSpan = time.time() + 30;\n",
     "    while time.time() < timeSpan:\n",
-    "        print(queue.get())\n",
+    "        print(identifyEventCountValues.get())\n",
     "    identifyEventCount_view.stop_data_fetch()\n"
    ]
   },
