--- a/Streams-SegmentIntegrationSample.ipynb
+++ b/Streams-SegmentIntegrationSample.ipynb
@@ -554,6 +554,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import queue\n",
     "import threading\n",
     "import time\n",
     "\n",
@@ -565,11 +566,17 @@
     "        self.durationSec = durationSec\n",
     "        \n",
     "    def run(self):\n",
+    "        #print(\"Start reading data\")\n",
     "        values = self.view.start_data_fetch()\n",
     "        timeSpan = time.time() + self.durationSec;\n",
     "        while time.time() < timeSpan:\n",
-    "            print(values.get())\n",
-    "        self.view.stop_data_fetch()\n"
+    "            try:\n",
+    "                print(values.get(True, 1))\n",
+    "            except queue.Empty:\n",
+    "                print(\"no data received\")\n",
+    "            #print(\"\\n\")\n",
+    "        self.view.stop_data_fetch()\n",
+    "        #print(\"Finished reading data\")\n"
    ]
   },
   {
@@ -591,7 +598,7 @@
     "    \n",
     "    # Start new Threads\n",
     "    mokupDataValues.start()\n",
-    "    #mokupDataValues.join()\n"
+    "    mokupDataValues.join()\n"
    ]
   },
   {
@@ -646,8 +653,8 @@
     "# Use WebhookDataSource as a Streams source\n",
     "# Injection URL (application/json): /x/y/ports/output/0/inject\n",
     "#webhookDataStream = ep.inject(webhookDataTopo, context='streams-segment-sample', name='jsoninject', monitor='endpoint-monitor')\n",
-    "#webhookDataStream = ep.inject(webhookDataTopo, context='streams-segment-sample', name='jsoninject', monitor='nbg8-test')\n",
-    "webhookDataStream = ep.inject(webhookDataTopo, context='streams-segment-sample', name='jsoninject', monitor=None)\n",
+    "webhookDataStream = ep.inject(webhookDataTopo, context='streams-segment-sample', name='jsoninject', monitor='nbg8-test')\n",
+    "#webhookDataStream = ep.inject(webhookDataTopo, context='streams-segment-sample', name='jsoninject', monitor=None)\n",
     "\n",
     "# Attach a view to watch the data stream when running\n",
     "webhookDataStream_view = webhookDataStream.view(name=\"Webhook data\", description=\"Webhook data stream\")\n",
@@ -681,7 +688,7 @@
     "cfg[context.ConfigParams.SSL_VERIFY] = False\n",
     "\n",
     "# Give the job a unique name \n",
-    "job_config = context.JobConfig(tracing='info', job_name='segment-webhook-peer2')\n",
+    "job_config = context.JobConfig(tracing='info', job_name='segment-webhook-peer')\n",
     "job_config.add(cfg)\n",
     "\n",
     "# submit the topology\n",
@@ -700,15 +707,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### curl commands to try ...\n",
+    "### curl commands to try w/o X-Signature ...\n",
     "\n",
-    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://nbg8-test:8443/segment-webhook-peer/streams-segment-sample2/jsoninject/inject\n",
     "\n",
-    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://nbg8-test:8443/segment-webhook-peer/streams-segment-sample2/jsoninject/ports/output/0/inject\n",
+    "print(\"\\n\\nShort address with short path (no x-sig):\\n\")\n",
     "\n",
-    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://nbg8-test-nbg8.apps.syss161.pok.stglabs.ibm.com:8443/segment-webhook-peer2/streams-segment-sample/jsoninject/inject\n",
+    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://nbg8-test:8443/segment-webhook-peer/streams-segment-sample/jsoninject/inject\n",
     "\n",
-    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://nbg8-test-nbg8.apps.syss161.pok.stglabs.ibm.com:8443/segment-webhook-peer2/streams-segment-sample/jsoninject/ports/output/0/inject\n"
+    "\n",
+    "print(\"\\n\\nShort address with long path (no x-sig):\\n\")\n",
+    "\n",
+    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://nbg8-test:8443/segment-webhook-peer/streams-segment-sample/jsoninject/ports/output/0/inject\n",
+    "\n",
+    "\n",
+    "print(\"\\n\\nLong address with short path (no x-sig):\\n\")\n",
+    "\n",
+    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://nbg8-test-nbg8.apps.syss161.pok.stglabs.ibm.com:8443/segment-webhook-peer/streams-segment-sample/jsoninject/inject\n",
+    "\n",
+    "\n",
+    "print(\"\\n\\nLong address with long path (no x-sig):\\n\")\n",
+    "\n",
+    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://nbg8-test-nbg8.apps.syss161.pok.stglabs.ibm.com:8443/segment-webhook-peer/streams-segment-sample/jsoninject/ports/output/0/inject\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### curl commands to try with X-Signature ...\n",
+    "\n",
+    "\n",
+    "print(\"\\n\\nShort address with short path:\\n\")\n",
+    "\n",
+    "!curl -k -H 'Content-Type: application/json' -H 'X-Signature: 7640680dbf3865cae04200ec65bf7e85a30577fa' --request POST --data '{\"channel\":\"server\",\"messageId\":\"test-message-01\",\"replay\":true,\"type\":\"identify\",\"timestamp\":\"2019-11-07T11:10:04.682Z\"}' https://nbg8-test:8443/segment-webhook-peer/streams-segment-sample/jsoninject/inject\n",
+    "\n",
+    "\n",
+    "print(\"\\n\\nShort address with long path:\\n\")\n",
+    "\n",
+    "!curl -k -H 'Content-Type: application/json' -H 'X-Signature: 7640680dbf3865cae04200ec65bf7e85a30577fa' --request POST --data '{\"channel\":\"server\",\"messageId\":\"test-message-01\",\"replay\":true,\"type\":\"identify\",\"timestamp\":\"2019-11-07T11:10:04.682Z\"}' https://nbg8-test:8443/segment-webhook-peer/streams-segment-sample/jsoninject/ports/output/0/inject\n",
+    "\n",
+    "\n",
+    "print(\"\\n\\nLong address with short path:\\n\")\n",
+    "\n",
+    "!curl -k -H 'Content-Type: application/json' -H 'X-Signature: 7640680dbf3865cae04200ec65bf7e85a30577fa' --request POST --data '{\"channel\":\"server\",\"messageId\":\"test-message-01\",\"replay\":true,\"type\":\"identify\",\"timestamp\":\"2019-11-07T11:10:04.682Z\"}' https://nbg8-test-nbg8.apps.syss161.pok.stglabs.ibm.com:8443/segment-webhook-peer/streams-segment-sample/jsoninject/inject\n",
+    "\n",
+    "\n",
+    "print(\"\\n\\nLong address with long path:\\n\")\n",
+    "\n",
+    "!curl -k -H 'Content-Type: application/json' -H 'X-Signature: 7640680dbf3865cae04200ec65bf7e85a30577fa' --request POST --data '{\"channel\":\"server\",\"messageId\":\"test-message-01\",\"replay\":true,\"type\":\"identify\",\"timestamp\":\"2019-11-07T11:10:04.682Z\"}' https://nbg8-test-nbg8.apps.syss161.pok.stglabs.ibm.com:8443/segment-webhook-peer/streams-segment-sample/jsoninject/ports/output/0/inject\n"
    ]
   },
   {
@@ -717,14 +763,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(\"\\n\\nShort address with short path (no x-sig):\\n\")\n",
     "\n",
-    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://nbg8-test:8443/segment-webhook-peer/streams-segment-sample2/jsoninject/inject\n",
+    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://nbg8-test:8443/segment-webhook-peer/streams-segment-sample/jsoninject/inject\n",
     "\n",
-    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://nbg8-test:8443/segment-webhook-peer/streams-segment-sample2/jsoninject/ports/output/0/inject\n",
     "\n",
-    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://nbg8-test-nbg8.apps.syss161.pok.stglabs.ibm.com:8443/segment-webhook-peer2/streams-segment-sample/jsoninject/inject\n",
+    "print(\"\\n\\nShort address with long path (no x-sig):\\n\")\n",
     "\n",
-    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://nbg8-test-nbg8.apps.syss161.pok.stglabs.ibm.com:8443/segment-webhook-peer2/streams-segment-sample/jsoninject/ports/output/0/inject\n"
+    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://nbg8-test:8443/segment-webhook-peer/streams-segment-sample/jsoninject/ports/output/0/inject\n",
+    "\n",
+    "\n",
+    "print(\"\\n\\nLong address with short path (no x-sig):\\n\")\n",
+    "\n",
+    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://nbg8-test-nbg8.apps.syss161.pok.stglabs.ibm.com:8443/segment-webhook-peer/streams-segment-sample/jsoninject/inject\n",
+    "\n",
+    "\n",
+    "print(\"\\n\\nLong address with long path (no x-sig):\\n\")\n",
+    "\n",
+    "!curl -k --header 'Content-Type: application/json' --request POST --data '{\"item1\":\"a\",\"item2\":\"a\"}'  https://nbg8-test-nbg8.apps.syss161.pok.stglabs.ibm.com:8443/segment-webhook-peer/streams-segment-sample/jsoninject/ports/output/0/inject\n",
+    "\n",
+    "        \n",
+    "print(\"\\n\\nShort address with short path:\\n\")\n",
+    "\n",
+    "!curl -k -H 'Content-Type: application/json' -H 'X-Signature: 7640680dbf3865cae04200ec65bf7e85a30577fa' --request POST --data '{\"channel\":\"server\",\"messageId\":\"test-message-01\",\"replay\":true,\"type\":\"identify\",\"timestamp\":\"2019-11-07T11:10:04.682Z\"}' https://nbg8-test:8443/segment-webhook-peer/streams-segment-sample/jsoninject/inject\n",
+    "\n",
+    "\n",
+    "print(\"\\n\\nShort address with long path:\\n\")\n",
+    "\n",
+    "!curl -k -H 'Content-Type: application/json' -H 'X-Signature: 7640680dbf3865cae04200ec65bf7e85a30577fa' --request POST --data '{\"channel\":\"server\",\"messageId\":\"test-message-01\",\"replay\":true,\"type\":\"identify\",\"timestamp\":\"2019-11-07T11:10:04.682Z\"}' https://nbg8-test:8443/segment-webhook-peer/streams-segment-sample/jsoninject/ports/output/0/inject\n",
+    "\n",
+    "\n",
+    "print(\"\\n\\nLong address with short path:\\n\")\n",
+    "\n",
+    "!curl -k -H 'Content-Type: application/json' -H 'X-Signature: 7640680dbf3865cae04200ec65bf7e85a30577fa' --request POST --data '{\"channel\":\"server\",\"messageId\":\"test-message-01\",\"replay\":true,\"type\":\"identify\",\"timestamp\":\"2019-11-07T11:10:04.682Z\"}' https://nbg8-test-nbg8.apps.syss161.pok.stglabs.ibm.com:8443/segment-webhook-peer/streams-segment-sample/jsoninject/inject\n",
+    "\n",
+    "\n",
+    "print(\"\\n\\nLong address with long path:\\n\")\n",
+    "\n",
+    "!curl -k -H 'Content-Type: application/json' -H 'X-Signature: 7640680dbf3865cae04200ec65bf7e85a30577fa' --request POST --data '{\"channel\":\"server\",\"messageId\":\"test-message-01\",\"replay\":true,\"type\":\"identify\",\"timestamp\":\"2019-11-07T11:10:04.682Z\"}' https://nbg8-test-nbg8.apps.syss161.pok.stglabs.ibm.com:8443/segment-webhook-peer/streams-segment-sample/jsoninject/ports/output/0/inject\n",
+    "    \n"
    ]
   },
   {
@@ -741,10 +818,8 @@
    "outputs": [],
    "source": [
     "if webhookDataJob:\n",
-    "    # Create a thread\n",
     "    webhookDataValues = readViewDataThread(webhookDataStream_view, 30)\n",
     "    \n",
-    "    # Start new Threads\n",
     "    webhookDataValues.start()\n",
     "    #webhookDataValues.join()\n"
    ]
